# libini

./: .doxyconf  .gitignore  CMakeLists.txt  README.md  howto.md
docs/: classes.html  dir_28dbaec2b20d9a8c53f24a31d2a614f4.html  doxygen.css  functions_vars.html  globals.html  globals_defs.html  globals_func.html  group___flags.html  group___flags.js  group___handler.js  group___iterator.html  group___iterator.js  group___memory_management.html  group___pair.js  group___section.html  group___section.js  ini_8h.html  ini_8h.js  ini_8h_source.html  modules.html  navtreedata.js  navtreeindex0.js  struct_i_n_i-members.html  struct_i_n_i.html  struct_i_n_i__iter-members.html  struct_i_n_i__iter.html  struct_i_n_i__pair-members.html  struct_i_n_i__pair.html  struct_i_n_i__pair.js
docs/html/: annotated.html  annotated_dup.js  classes.html  dir_28dbaec2b20d9a8c53f24a31d2a614f4.js  dir_d44c64559bbebec7f509842c48db8b23.html  dir_d44c64559bbebec7f509842c48db8b23.js  files.html  functions.html  functions_vars.html  globals.html  globals_defs.html  globals_func.html  globals_type.html  group___flags.html  group___flags.js  group___handler.html  group___i_o.html  group___i_o.js  group___memory_management.js  group___pair.html  group___section.html  group___section.js  group___sections.html  index.html  ini_8h.html  ini_8h.js  ini_8h_source.html  md_README.html  menudata.js  modules.js  navtreedata.js  navtreeindex0.js  pages.html  struct_i_n_i-members.html  struct_i_n_i.html  struct_i_n_i.js  struct_i_n_i__iter.html  struct_i_n_i__iter.js  struct_i_n_i__pair-members.html  struct_i_n_i__pair.html  (+4 more)
docs/html/search/: all_0.js  all_1.js  all_2.js  all_3.js  all_4.js  all_7.js  classes_0.js  defines_0.js  defines_1.js  functions_0.js  groups_2.js  groups_3.js  groups_4.js  pages_0.js  search.css  searchdata.js  typedefs_0.js  variables_0.js  variables_1.js  variables_3.js  variables_4.js  variables_5.js
docs/search/: all_0.js  all_1.js  all_2.js  all_3.js  all_4.js  all_8.js  all_9.js  all_a.js  classes_0.js  functions_0.js  groups_0.js  groups_5.js  variables_2.js  variables_5.js
include/INI/: ini.h
src/: ini.c  ini_interpreter.c  ini_iterator.c  ini_pair.c  ini_section.c  ini_util.c
src/examples/: CMakeLists.txt  parse_ini.c  to_winnl.c
src/tests/: CMakeLists.txt  general.c  ignore_case.c  iterator.c  read_static.c  read_static_err.c  read_write_file.c  write.c
